# fm-dnf-plugin

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.rst  cmake_install.cmake
cfg/: CMakeLists.txt  Makefile  cmake_install.cmake
cfg/fm/: fm.cfg
cfg/fm.modules.d/: fm_groups.cfg  fm_tests.cfg  fm_workshop.cfg
docs/: Makefile  conf.py  index.rst  publish
fm/: CMakeLists.txt  Makefile  __init__.py  api_client.py  api_clients.py  cli.py  cmake_install.cmake  config_file.py  dnf_base.py  exceptions.py  fm_modules_resolver.py  main.py  metadata_cache.py  module.py  modules.py  modules_search.py  option_parser.py  repo_config_file.py  repo_file.py
fm/metadata/: __init__.py  module_api.py  module_component.py  module_filter.py  module_profile.py  rpm_set.py
fm/modules_resolver/: __init__.py  modules_resolver.py
package/: README.rst  archive  make_rpm
plugins/: CMakeLists.txt  Makefile  cmake_install.cmake  module.py
tests/: CMakeLists.txt  Makefile  cmake_install.cmake  support.py  test_cache.py  test_enable_disable.py  test_info.py  test_list.py  test_list_modules.py  test_profiles.py  test_rebase.py  test_search.py  test_summary.py  test_upgrade.py
tests-smoke/: CMakeLists.txt  Makefile  README.rst  cmake_install.cmake  fm.cfg  runtests.sh  test-1.sh
tests-smoke/fm.modules.d/: fedora.cfg  modularity-f24.cfg
tests/test-repo/: modules.json
tests/test-repo/apr/: modulemd.yaml
tests/test-repo/core/: modulemd.yaml
tests/test-repo/httpd22/: modulemd.yaml
tests/test-repo/httpd22-2/: modulemd.yaml
tests/test-repo/httpd24/: modulemd.yaml
